--- a/client/lib/components/menuitems/settings/view.html
+++ b/client/lib/components/menuitems/settings/view.html
@@ -1,4 +1,4 @@
-<template name="editMenuItem">
+<template name="settingsMenuItem">
   <form method="get" class="form-horizontal" data-id="{{state$menu._id}}">
     <div class="form-group">
       <label class="col-sm-2 control-label">Category</label>
@@ -20,6 +20,7 @@
         </select>
       </div>
     </div>
+
     <div class="form-group">
       <label class="col-sm-2 control-label">Status</label>
 
@@ -44,6 +45,7 @@
         {{/if}}
       </div>
     </div>
+
     <div class="form-group">
       {{#if canEditMenu}}
         <label class="col-sm-2 control-label">Image</label>
@@ -54,40 +56,37 @@
       {{/if}}
 
       <div class="col-sm-9 pull-right">
-        {{# if canEditMenu}}
-          <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem" data-id="{{state$}}">Upload Image</button>
-          <br>
-        {{/if}}
-
-        <div>
+        <div class="menuImageDiv">
           {{#if state$menu.image}}
-              <div class="file uploadedImageDiv">
-
-              {{#if canEditMenu}}
-                <i class="fa fa-remove remove-image" title="Remove image"></i>
+            <div class="file uploadedImageDiv">
+              {{# if canEditMenu}}
+                <div class="box-wrapper pull-right" style="display: none; position: absolute;">
+                  <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem"><i class="fa fa-edit m-r-sm"></i>Edit Image</button><br>
+                </div>
               {{/if}}
-
               <a href="#">
                 <span class="corner"></span>
-
                 <div class="image">
                   <img id="uploadedImageUrl" src="{{state$menu.image}}" class="img-responsive menu-item-image">
                 </div>
               </a>
             </div>
           {{else}}
-            <div class="file uploadedNewImageDiv hide">
-              <a href="#">
-                <span class="corner"></span>
-
-                <div class="image">
-                  <img id="uploadedImageUrl" src="" class="img-responsive menu-item-image">
-                </div>
-              </a>
-            </div>
+            {{# if canEditMenu}}
+              <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem">Upload Image</button><br>
+              <div class="file uploadedNewImageDiv hide">
+                <a href="#">
+                  <span class="corner"></span>
+                  <div class="image">
+                    <img id="uploadedImageUrl" src="" class="img-responsive menu-item-image">
+                  </div>
+                </a>
+              </div>
+            {{/if}}
           {{/if}}
         </div>
       </div>
     </div>
+
   </form>
 </template>
