--- a/client/lib/components/jobItems/items/edit/view.html
+++ b/client/lib/components/jobItems/items/edit/view.html
@@ -1,9 +1,9 @@
 <template name="jobItemEdit">
   <tr>
     <td>{{state$item.name}}</td>
-    <td>{{state$item.type}}</td>
+    <td>{{jobTypeById state$item.type}}</td>
     <td>$ {{state$item.prepCostPerPortion}}</td>
-    <td><input type="text" name="prep_qty" class="prepQty" data-id="{{state$item._id}}" value="{{state$quantity}}"/></td>
+    <td><input type="text" name="prep_qty" class="prepQty" data-id="{{state$item._id}}" value="1"/></td>
     <td>
       <button type="button" class="btn btn-outline btn-xs btn-danger removePrep" data-id="{{state$item._id}}">
         <i class="fa fa-times"></i>
