--- a/client/lib/components/menuitems/submit/view.html
+++ b/client/lib/components/menuitems/submit/view.html
@@ -35,25 +35,7 @@
     </div>
     <div class="form-group">
       <label class="col-sm-2 control-label">Prep items used</label>
-      <div class="col-sm-10">
-        <table class="table table-hover thumbnail">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Type</th>
-              <th>Cost per Portion ($)</th>
-              <th>Portions</th>
-            </tr>
-          </thead>
-          <tbody>
-            {{#each jobItemsList}}
-              {{> render component='jobItemEdit' jobitem=this}}
-            {{/each}}
-          </tbody>
-        </table>
-        <br>
-        <button id="showJobItemsList"  class="btn btn-block btn-outline btn-primary" type="button"><i class="fa fa-plus"></i> Add prep jobs to menu item</button>
-      </div>
+      {{> render component="listOfJobItems" id="menuSubmit" name="menuSubmit"}}
     </div>
     
     <div class="form-group">
@@ -90,5 +72,11 @@
         <button type="submit" class="btn btn-primary">Save Changes</button>
       </div>
     </div>
-  </form>   
+  </form> 
+
+  <!-- JOB ITEMS LIST-->
+  <div class="modal fade" id="jobItemListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component='jobItemsModalList' name="submitMenuItem"}}
+  </div>
+  <!-- /JOB ITEMS LIST -->  
 </template>
