--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -39,6 +39,12 @@
   </div>
   <!-- /INGREDIENTS LIST -->
 
+  <!-- JOB ITEMS LIST-->
+  <div class="modal fade" id="jobItemListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component='jobItemsModalList' name="submitMenuItem"}}
+  </div>
+  <!-- /JOB ITEMS LIST -->  
+
   <!-- SHOW MENUS LIST -->
   <div class="modal fade" id="showMenusList" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     {{> render component = 'showMenusList'}}
