--- a/client/views/app/menu-items/details/instructions/instructions.html
+++ b/client/views/app/menu-items/details/instructions/instructions.html
@@ -3,6 +3,7 @@
     <div class="ibox-title">
       <h5>Instructions</h5>
       <div class="ibox-tools">
+        {{uiState}}
         {{#if instruction.typing}}
           {{#if instruction.saved}}
             <span class="text-navy pull-left"> &nbsp; Saved</span>
