--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -7,7 +7,7 @@
       <div class="col-lg-12">
         <div class="row">
           <div class="col-lg-8 col-md-8 col-xs-12 col-sm-12">
-            {{> menuItemInstructions}}
+            {{> menuItemInstructions collapsed=uiStates.instructions}}
             {{> menuItemImage}}
             {{> menuItemSettings}}
             {{> menuItemsListByType type='prep' jobItems=jobItems}}
