--- a/client/views/app/calendar/calendar-view/calendar-item/event-item-flyout/event-item-flyout-content/events/event-recurring-job/event-recurring-job.html
+++ b/client/views/app/calendar/calendar-view/calendar-item/event-item-flyout/event-item-flyout-content/events/event-recurring-job/event-recurring-job.html
@@ -35,6 +35,11 @@
           </div>
         </div>
       {{/if}}
+
+      <div class="col-xs-12 event-description-row">
+        {{> eventRemove}}
+      </div>
+
     </div>
   </div>
 </template>
