--- a/client/views/app/calendar/calendar-view/calendar-item/event-item-flyout/event-item-flyout-content/events/event-task/event-task.html
+++ b/client/views/app/calendar/calendar-view/calendar-item/event-item-flyout/event-item-flyout-content/events/event-task/event-task.html
@@ -12,7 +12,7 @@
         <div class="col-xs-6">
           <strong>Duration</strong>
         </div>
-        <div class="col-xs-6 text-right">{{humanizeTimeDuration task.duration 'minutes'}}</div>
+        <div class="col-xs-6 text-right">{{taskDuration}}</div>
       </div>
 
       {{#if task.description}}
@@ -46,6 +46,8 @@
             <i class="fa fa-check"></i> Done
           {{/if}}
         </button>
+
+        {{> eventRemove}}
       </div>
     </div>
   </div>
