--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-notes.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-notes.html
@@ -6,30 +6,7 @@
 
   <div class="flyout-content">
     {{# if canEditRoster}}
-      <div class="text-center link-block manager-note-create-block">
-        {{#if notes.count}}
-          <button class="btn btn-link create-note-button">
-            <i class="fa fa-plus"></i>
-            Create a note
-          </button>
-        {{else}}
-          <strong>No notes for today, </strong>
-          <button class="btn btn-link create-note-button">
-            <i class="fa fa-plus"></i>
-            Create one
-          </button>
-        {{/if}}
-      </div>
-
-      {{#if state$displayEditor}}
-        {{> managerNotesEditor note=null onSubmit=addManagerNote date=date}}
-      {{/if}}
-    {{/if}}
-
-    {{#if notes.count}}
-      {{#each notes}}
-        {{> managerNoteItem}}
-      {{/each}}
+      {{> managerNoteWidget}}
     {{/if}}
   </div>
 </template>
